force-app/main/default/objects/AC_Schedule_Calendar__c/AC_Schedule_Calendar__c.object-meta.xml
<CustomObject>
    <label>AC Schedule Calendar</label>
    <nameField>
        <label>AC Schedule Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>