force-app/main/default/objects/AC_Schedule_Calendar__c/fields/On_Call__c.field-meta.xml
<CustomField>
    <fullName>On_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Call</label>
    <type>Checkbox</type>
</CustomField>