force-app/main/default/objects/AC_Schedule_Calendar__c/fields/On_Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>On_Call_End_Time__c</fullName>
    <label>On Call End Time</label>
    <type>Time</type>
</CustomField>